force-app/main/default/objects/DOM_Residency_Checklist_Question__mdt/DOM_Residency_Checklist_Question__mdt.object-meta.xml
<CustomObject>
    <label>DOM Residency Checklist Question</label>
    <pluralLabel>DOM Residency Checklist Questions</pluralLabel>
</CustomObject>