force-app/main/default/objects/DOM_Residency_Checklist_Question__mdt/fields/Q10__c.field-meta.xml
<CustomField>
    <fullName>Q10__c</fullName>
    <label>Q10</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>