force-app/main/default/objects/DOM_Residency_Checklist_Question__mdt/fields/Q11__c.field-meta.xml
<CustomField>
    <fullName>Q11__c</fullName>
    <label>Q11</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>