force-app/main/default/objects/DOM_Residency_Checklist_Question__mdt/fields/Q12__c.field-meta.xml
<CustomField>
    <fullName>Q12__c</fullName>
    <label>Q12</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>