force-app/main/default/objects/DOM_Residency_Checklist_Question__mdt/fields/Q2_CB__c.field-meta.xml
<CustomField>
    <fullName>Q2_CB__c</fullName>
    <label>Q2_CB</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>