force-app/main/default/objects/DOM_Residency_Checklist_Question__mdt/fields/Q4_CB1__c.field-meta.xml
<CustomField>
    <fullName>Q4_CB1__c</fullName>
    <label>Q4_CB1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>